# VirtualFitting

./: .gitignore  DOCKER_GUIDE.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_docker.ps1  run_docker.sh  setup_linux.sh  setup_windows.ps1  start.ps1  virtual_tryon_complete.py  virtual_tryon_simple.py  virtual_tryon_system.py
docker/: DOCKER_GUIDE.md  docker-compose.yml  run_docker.ps1  run_docker.sh
docs/notes/: README.md  clothing-keypoint-issues.md  clothing-keypoint-redesign.md  mask-postprocess-experiment.md  v2-curvature-experiment.md  v3-width-profile-experiment.md
scripts/: README.md  build_report.py  detect_all_people.py  diagnose_all_people.py  diagnose_body_pts.py  diagnose_body_pts_mirror.py  diagnose_grayscale.py  diagnose_qipao_bump.py  diagnose_scales.py  diagnose_scales_v2.py  grid_3x4.py  qipao_bump_verify.py  test_curvature_ransac.py  test_edge_segment.py  test_rembg.py  test_smoothing.py  viz_contour_points.py  viz_correspondence.py
src/virtual_tryon/: __init__.py  clothing_detector.py  human_cache.py  human_detector.py  io.py  keypoints.py  tps_warp.py  visualize.py  warp.py
tools/: compare_mask_postprocess.py
