[project]
name = "virtualfitting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.8.2",
    "mediapipe>=0.10.8",
    "numpy>=1.24.3",
    "opencv-contrib-python>=4.8.1.78",
    "opencv-python>=4.8.1.78",
    "pillow>=10.1.0",
    "scikit-image>=0.22.0",
    "scipy>=1.11.4",
]
